--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -17,7 +17,7 @@ body {
 /*-------------------------------------------------------------------------------------------*/
 
 .navbar {
-  background: rgb(80,0,11);
+  background: var(--vino-oscuro);
   box-shadow: 0 12px 20px rgba(0,0,0,0.2);
 }
 
@@ -25,6 +25,7 @@ body {
   color: rgb(248,255,247);
   font-weight: 700;
   font-size: 40px;
+  font-family: 'Poiret One', cursive;
 }
 
 .user {
@@ -33,11 +34,13 @@ body {
   transition: all 0.4s ease;
 }
 
-.brand-dorada, .navbar-toggler {
-  color:rgb(229,208,123);
+.brand-dorada, 
+.navbar-toggler {
+  color:var(--dorado);
 }
 
-.nav-link, .brand-cava {
+.nav-link, 
+.brand-cava {
   text-decoration: none;
   transition: all 0.4s ease;
   font-weight: 700;
@@ -47,7 +50,7 @@ body {
 .nav-link:hover,
 .brand-cava:hover,
 .user:hover {
-  color:rgb(229,208,123);
+  color:var(--dorado);
 }
 
 .custom-toggler.navbar-toggler {
@@ -199,3 +202,37 @@ body {
 
 
 }   
+
+/*-------------------------contacto---------------------*/
+
+.contact {
+  color:var(--vino-oscuro);
+}
+
+.etiqueta {
+  color:#828385;
+}
+#contact .btn-primary {
+  border: 1px solid var(--vino-oscuro);
+  background: var(--vino-oscuro);
+  color: var(--blanco); 
+  font-size: 20px;
+}
+
+#contact .btn-primary:hover {
+  background-color: var(--dorado)!important;
+  border: 1px solid var(--blanco);
+  color: var(--vino-oscuro);
+}
+
+.form-control:focus {
+  border-color: var(--dorado);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--dorado);
+}
+
+.b-img {
+ background-image: url(/assets/contacto/cata.jpg);
+ background-position: center;
+ background-size: cover;
+}
+/*-------------------------//---------------------*/
