--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -25,7 +25,6 @@ body {
   color: rgb(248,255,247);
   font-weight: 700;
   font-size: 40px;
-  font-family: 'Poiret One', cursive;
 }
 
 .user {
@@ -314,7 +313,7 @@ body {
 
 }   
 
-/*-------------------------contacto---------------------*/
+/*--------------------contacto---------------------*/
 
 .contact {
   color:var(--vino-oscuro);
@@ -346,4 +345,37 @@ body {
  background-position: center;
  background-size: cover;
 }
-/*-------------------------//---------------------*/
+/*--------------------//---------------------*/
+
+/*--------------------footer---------------------*/
+
+.footer {
+  background: rgb(239,237,233);
+  color:#4D012B;
+}
+
+.footer a {
+  color:#4D012B;
+  font-size: 1.5rem;
+  transition: all 0.4s ease;
+}
+
+.footer a:hover {
+  color: rgb(229,208,123);
+}
+
+.br-footer {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.contact-details a {
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.sub-cont {
+  font-size: 10px;
+}
+
+/*--------------------//---------------------*/
