--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -222,6 +222,161 @@ body {
 
 
   
+/* -----------------------------------SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+/* -----------------------------------SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+
+.modal-novedades {
+  text-align: justify;
+  text-align: center;
+}
+
+.card-title-novedades {
+  text-align: center;
+  color: #7A4044;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+
+}
+
+.card-text-novedades {
+  text-align:justify;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+
+
+}
+
+.btn-resto  {
+  margin-left: 30%;
+ border-radius: 6px;
+ 
+ 
+}
+
+
+.contenedor-cards-novedades {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+margin-top: 5px;
+margin-bottom: 20px;}
+
+.card-novedades {
+  box-shadow: 13px 19px 4px -9px rgba(0,0,0,0.25);
+}
+
+.modal-header {
+  background-color:#CCB1B3 ;
+}
+
+.carousel-resto {
+  max-width: 100%;
+  margin-top: 8px;
+ 
+
+}
+
+.seccion-restaurant {
+display: flex;
+margin-top: 20px;
+} 
+
+.resto {
+  background-color:#CCB1B3 ;
+  text-align: center;
+  text-justify: auto;
+}
+
+.texto-resto {
+  margin-top: 50px;
+  
+}
+
+.texto-resto h1 {
+  margin-bottom: 20px;
+  color: cornsilk;
+  font-family: 'Dancing Script', cursive;
+  font-size:60px ;
+
+}
+.texto-resto p {
+  text-align:justify;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size:18px;
+  font-family: 'Playfair Display', serif;
+
+}
+
+.btn-resto {
+  margin-top: 150px;
+}
+
+@media only screen and (min-device-width: 320px) and (max-width: 767px) {
+  .texto-resto h1 {
+      font-size: 50px;
+      color: black;
+  }
+
+  .resto {
+      max-width: 100%;
+  }
+  .seccion-restaurant {
+      display: block;
+      
+    } 
+
+    .contenedor-cards-novedades {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: wrap;
+  margin-top: 10px;}
+
+
+}
+
+@media only screen and (min-device-width: 768px)  and (max-width: 1281px) {
+  .seccion-restaurant {
+      display: block;
+    } 
+
+    .resto {
+      max-width: 100%;
+  }
+  .contenedor-cards-novedades {
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      flex-wrap: nowrap;
+  margin-top: 10px;}
+ 
+}
+
+/* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+/* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /******************************* RESPONSIVE ********************************/
@@ -346,6 +501,151 @@ body {
  background-size: cover;
 }
 /*--------------------//---------------------*/
+
+/* -----------------------------------SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+/* -----------------------------------SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+
+.modal-body p {
+  text-align: justify;
+}
+
+.card-title {
+  text-align: center;
+  color: #7A4044;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+
+}
+
+.card-text {
+  text-align:justify;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+
+
+}
+
+.btn-resto {
+  margin-left: 30%;
+ border-radius: 6px;
+ 
+}
+
+
+.contenedor-cards-novedades {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+margin-top: 10px;}
+
+.card {
+  box-shadow: 13px 19px 4px -9px rgba(0,0,0,0.25);
+}
+
+.modal-header {
+  background-color:#CCB1B3 ;
+}
+
+.carousel-resto {
+  max-width: 100%;
+ 
+
+}
+
+.seccion-restaurant {
+display: flex;
+} 
+
+.resto {
+  max-width: 50%;
+  background-color:#CCB1B3 ;
+  text-align: center;
+  text-justify: auto;
+}
+
+.texto-resto {
+  margin-top: 50px;
+  
+}
+
+.texto-resto h1 {
+  margin-bottom: 20px;
+  color: cornsilk;
+  font-family: 'Dancing Script', cursive;
+  font-size:60px ;
+
+}
+.texto-resto p {
+  text-align:justify;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size:18px;
+  font-family: 'Playfair Display', serif;
+
+}
+
+@media only screen and (min-device-width: 320px) and (max-width: 767px) {
+  .texto-resto h1 {
+      font-size: 50px;
+      color: black;
+  }
+
+  .resto {
+      max-width: 100%;
+  }
+  .seccion-restaurant {
+      display: block;
+      
+    } 
+
+    .contenedor-cards {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: wrap;
+  margin-top: 10px;}
+
+
+}
+
+@media only screen and (min-device-width: 768px)  and (max-width: 1281px) {
+  .seccion-restaurant {
+      display: block;
+    } 
+
+    .resto {
+      max-width: 100%;
+  }
+  .contenedor-cards {
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      flex-wrap: nowrap;
+  margin-top: 10px;}
+ 
+}
+
+/* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+/* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*--------------------footer---------------------*/
 
