--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -166,7 +166,7 @@ body {
 
 .product-card {
   width: 100%;
-  background-color: var(--rosa-claro);
+  background-color: var(--blanco);
   border-radius: 10px;
   object-fit: contain;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
