--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -27,7 +27,7 @@ body {
   font-size: 40px;
 }
 
-.user {
+.user, .cart {
   color:rgb(248,255,247); 
   text-decoration: none;
   transition: all 0.4s ease;
@@ -48,7 +48,8 @@ body {
 
 .nav-link:hover,
 .brand-cava:hover,
-.user:hover {
+.user:hover,
+.cart:hover {
   color:var(--dorado);
 }
 
