actulice enoturismo seccion cabalgata

--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -357,6 +357,12 @@ margin-top: 20px;
 
 /* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
 /* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
+/*-------------------------------------SECCION CABALGATA----------------------------------------------------*/
+   .mapa{
+    margin-top: 25px;
+    margin-bottom: 25px;
+   }
+/*---------------------------------------FIN SECCION CABALGATA----------------------------------------------*/
 
 /* ----------------------------------- SECCION FORMULARIO RESERVA--------------------------------*/
 
