--- a/Cava Dorada/css/style.css
+++ b/Cava Dorada/css/style.css
@@ -873,20 +873,222 @@ display: flex;
 /* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
 /* ----------------------------------- FIN SECCION NOVEDADES Y RESERVA RESTO--------------------------------*/
 
+/*--------------------MAIN---------------------*/
+
+.contenedor10 {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.seccion{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.texto-1 {
+  font-weight: 300;
+  font-family: 'Bowlby One', cursive !important;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+}
+
+html {
+  box-sizing: border-box;
+  margin: auto;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.centrar-texto{ 
+  text-align: center;
+}
+
+.novedades{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto;
+  margin-top: 20px;
+
+}
+
+.novedades-nuevo{
+  flex-basis: calc(33.3% - 1rem);
+  border-style: solid;
+  border-color: #C39393;
+  border-width: 1px;
+  background: #f1f0f0;
+}
+
+img{
+  max-width: 100%;
+}
+
+.contenido-novedades{
+  padding: 2rem;
+}
+
+.contenido-novedades h3, .contenido-novedades p{
+  margin: 0;
+}
+
+.contenido-novedades p{
+  padding: 1rem 0.2rem
+}
 
 
+.block{
+  display: block!important;
+}
 
+.boton{
+ color: white;
+ font-weight: 700;
+ text-decoration: none;
+ font-size: 1.5rem;
+ padding: 0.2rem 3rem;
+ margin-top: 2.5rem;
+ display: inline-block;
+ text-align: center;
+ border-radius: 5px;
 
+}
 
+.boton-final1{
+  background-color: #63032E;
+}
 
+a:hover{
+  color: #E5D07B;
+}
 
+/*--------------------contacto pag. principal---------------------*/
 
+.contacto-ppal{
+  background-image: url(../assets/img/contacto/Diseño\ sin\ título\ \(10\).png);
+  background-position: center center;
+  background-size: cover;
+  height: 21rem;
+  display: flex;
+  align-items: center;
+  
+}
 
+.contacto-contenidos {
+  flex: 1;
+  color: #FFFFFF;
+  text-shadow: 3px 3px 3px #000000;
+  background-color: rgba(99, 3, 46, 0.2);
+  padding-top: 1rem;
+  padding-left: 3rem;
+  padding-bottom: 1rem;
+  border-radius: 5px;
+  
+}
 
+.contacto-contenidos p {
+   font-size: 1.1rem;
+   filter: opacity(100%);
+   line-height: 1rem;
+   
+}
 
+.contacto-contenidos h2 {
+  padding-bottom: 1rem;
+   
+}
+/*--------------------TESTIMONIAL---------------------*/
+.capa{
+  width: 100%;
+  max-width: 1200px;
+  text-align: center;
+  padding: 20px;
+  padding-top: 20px;
+  position: relative;
+  background-image: url(../assets/img/contacto/fotomurales-de-vinilos-atardecer-puente-en-el-lago.jpg) ;
+  background-position: unset;
+  background-size: cover;
+  height: 100%;
+}
 
+.capa h2{
+  color: white;
+  font-family: 'Bowlby One', cursive !important;
+  text-shadow: 3px 3px 3px #000000
+}
 
+.capa-black{
+  width: 100%;
+  height: 100%;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+ 
 
+.contenedor-testimoniales{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
+  position: relative;
+  
+
+}
+
+.testimonial{
+  width: 340px;
+  margin: 20px;
+  background: #e8a5ca;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 0px 0px 40px 5px black;
+}
+
+.foto-perfil{
+  margin: auto;
+  width: 120px;
+  height: 120px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  position: relative;
+  top: -60px;
+  box-shadow: 0px 0px 30px -6px black;
+}
+
+.uno { 
+  background-image: url(../assets/img/contacto/1.jpg);
+}
+.dos { 
+  background-image: url(../assets/img/contacto/2.jpg);
+}
+.tres { 
+  background-image: url(../assets/img/contacto/3.jpg);
+}
+
+.testimonial h3 {
+  margin-top: -40px;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+.testimonial h4 {
+  margin-top: 10px;
+  font-size: 19px;
+  color: #7e7e7e
+  
+}
+
+.testimonial p {
+  margin-top: 10px;
+  font-size: 15px;
+  color: #333333
+
+}
 
 
 
